# -

./: .gitignore  DATA_SOURCES.md  README.md  app.js  config.html  config.js  data.js  football-agent.db  index.html  match.html  model-config.example.json  package-lock.json  package.json  predict.html  predict.js  pyproject.toml  requirements.txt  server.js  skills.html  source-registry.json  styles.css  teams.html  teams.js  vite.config.js  信息链接大全.txt
agent-skills/: learning-failures.md  prematch-analysis.md
ai/: report_generator.py
ai/adapters/: base.py  deepseek.py  dmxapi.py  factory.py  openai_compatible.py
backend/app/: main.py
backend/app/api/: compat.py  matches.py  model_configs.py  predictions.py  prematch.py  teams.py
backend/app/repositories/: sqlite.py
backend/app/schemas/: match.py  model_config.py  prediction.py  prematch.py  team.py
backend/app/services/: prediction_service.py  prematch_service.py
backend/app/tasks/: scheduler.py
docs/: ARCHITECTURE.md
engine/: confidence.py  features.py  ml_model.py  source_score.py
src/predict/: PredictConsole.vue  main.js
tests/engine/: test_confidence.py  test_source_score.py
